// ============================================================================
// Multimodal Architecture Validation Test - Simplified Version
// ============================================================================
//
// @file MultimodalArchitectureTest.kt
// @version 1.0.0
// @author Unhinged Team
// @date 2025-01-06
// @description Simplified architecture validation test for multimodal AI refactoring
//
// This test validates the core architecture concepts without depending on
// the full gRPC infrastructure, focusing on service boundaries and patterns.
//
// ============================================================================

package com.unhinged.multimodal

import com.unhinged.domain.multimodal.*
import org.junit.jupiter.api.*
import org.junit.jupiter.api.Assertions.*
import java.awt.Color
import java.awt.Graphics2D
import java.awt.image.BufferedImage
import java.io.ByteArrayOutputStream
import javax.imageio.ImageIO
import kotlin.test.Test

@TestInstance(TestInstance.Lifecycle.PER_CLASS)
class MultimodalArchitectureTest {
    
    @Test
    fun `should validate domain entities follow clean architecture patterns`() {
        // Given: A multimodal analysis request
        val imageData = createTestImage()
        val request = AnalysisRequest(
            imageId = "test-001",
            imageData = imageData,
            analysisType = AnalysisType.SCREENSHOT,
            workflowType = WorkflowType.BASIC_ANALYSIS,
            prompt = "Test analysis",
            userId = "test-user"
        )
        
        // When: Creating domain entities
        val analysis = MultimodalAnalysis(
            imageId = request.imageId,
            analysisType = request.analysisType,
            description = "Test analysis result",
            confidence = 0.85,
            modelUsed = "test-model",
            workflowType = request.workflowType!!,
            processingTime = 1.5,
            userId = request.userId
        )
        
        // Then: Domain entities should be properly structured
        assertNotNull(analysis.id)
        assertEquals("test-001", analysis.imageId)
        assertEquals(AnalysisType.SCREENSHOT, analysis.analysisType)
        assertEquals(WorkflowType.BASIC_ANALYSIS, analysis.workflowType)
        assertEquals("test-user", analysis.userId)
        assertTrue(analysis.confidence > 0.0)
        assertTrue(analysis.processingTime > 0.0)
        assertNotNull(analysis.createdAt)
    }
    
    @Test
    fun `should validate workflow configuration follows business rules`() {
        // Given: Different analysis types
        val analysisTypes = listOf(
            AnalysisType.SCREENSHOT,
            AnalysisType.DOCUMENT,
            AnalysisType.UI_COMPONENT,
            AnalysisType.NATURAL_IMAGE,
            AnalysisType.OCR_FOCUSED
        )
        
        // When: Creating workflow configurations
        analysisTypes.forEach { analysisType ->
            val config = WorkflowConfiguration(
                type = WorkflowType.CONTEXTUAL_ANALYSIS,
                visionModel = "test-model",
                useContextEnhancement = true,
                maxIterations = 3,
                requireConsensus = false,
                timeoutSeconds = 300
            )
            
            // Then: Configuration should be valid
            assertNotNull(config.type)
            assertTrue(config.visionModel.isNotEmpty())
            assertTrue(config.maxIterations > 0)
            assertTrue(config.timeoutSeconds > 0)
        }
    }
    
    @Test
    fun `should validate UI elements structure for architecture compliance`() {
        // Given: UI elements detected in analysis
        val uiElements = listOf(
            UIElement(
                type = "button",
                confidence = 0.9,
                bounds = ElementBounds(100, 200, 80, 30),
                properties = mapOf("text" to "Submit", "color" to "blue")
            ),
            UIElement(
                type = "input",
                confidence = 0.85,
                bounds = ElementBounds(100, 150, 200, 25),
                properties = mapOf("placeholder" to "Enter text")
            )
        )
        
        // When: Validating UI elements
        uiElements.forEach { element ->
            // Then: Elements should follow proper structure
            assertTrue(element.type.isNotEmpty())
            assertTrue(element.confidence > 0.0)
            assertTrue(element.confidence <= 1.0)
            assertNotNull(element.bounds)
            element.bounds?.let { bounds ->
                assertTrue(bounds.x >= 0)
                assertTrue(bounds.y >= 0)
                assertTrue(bounds.width > 0)
                assertTrue(bounds.height > 0)
            }
        }
    }
    
    @Test
    fun `should validate service boundary separation principles`() {
        // This test validates that our architecture properly separates concerns
        
        // Given: Analysis request (would come from Kotlin business logic)
        val request = AnalysisRequest(
            imageId = "boundary-test",
            imageData = createTestImage(),
            analysisType = AnalysisType.SCREENSHOT,
            userId = "test-user"
        )
        
        // When: Simulating the architecture flow
        // 1. Kotlin backend receives HTTP request
        // 2. Kotlin validates and creates domain objects
        // 3. Kotlin orchestrates workflow
        // 4. Python services perform ONLY AI inference
        // 5. Kotlin processes results and applies business logic
        
        val mockPythonInferenceResult = MockPythonInferenceResult(
            description = "Mock AI analysis result",
            confidence = 0.8,
            modelUsed = "mock-model",
            processingTime = 1.2
        )
        
        // Kotlin business logic processes the Python result
        val finalAnalysis = MultimodalAnalysis(
            imageId = request.imageId,
            analysisType = request.analysisType,
            description = mockPythonInferenceResult.description,
            confidence = mockPythonInferenceResult.confidence,
            modelUsed = mockPythonInferenceResult.modelUsed,
            workflowType = WorkflowType.BASIC_ANALYSIS, // Kotlin determines workflow
            processingTime = mockPythonInferenceResult.processingTime,
            metadata = mapOf(
                "workflow_config" to "BASIC_ANALYSIS", // Kotlin adds business metadata
                "quality_score" to "0.8",              // Kotlin calculates quality
                "requires_review" to "false"           // Kotlin business rules
            ),
            userId = request.userId // Kotlin manages user context
        )
        
        // Then: Validate proper service boundaries
        // Python only provided: description, confidence, modelUsed, processingTime
        assertEquals(mockPythonInferenceResult.description, finalAnalysis.description)
        assertEquals(mockPythonInferenceResult.confidence, finalAnalysis.confidence)
        assertEquals(mockPythonInferenceResult.modelUsed, finalAnalysis.modelUsed)
        assertEquals(mockPythonInferenceResult.processingTime, finalAnalysis.processingTime)
        
        // Kotlin added: ID, workflow, metadata, user context, timestamps
        assertNotNull(finalAnalysis.id)
        assertEquals(WorkflowType.BASIC_ANALYSIS, finalAnalysis.workflowType)
        assertTrue(finalAnalysis.metadata.containsKey("workflow_config"))
        assertTrue(finalAnalysis.metadata.containsKey("quality_score"))
        assertEquals(request.userId, finalAnalysis.userId)
        assertNotNull(finalAnalysis.createdAt)
    }
    
    @Test
    fun `should validate error handling patterns`() {
        // Given: Invalid analysis requests
        val invalidRequests = listOf(
            // Empty image ID
            AnalysisRequest("", byteArrayOf(1, 2, 3), AnalysisType.SCREENSHOT),
            // Empty image data
            AnalysisRequest("test", byteArrayOf(), AnalysisType.SCREENSHOT),
            // Invalid confidence range would be caught by domain validation
        )
        
        // When/Then: Domain validation should catch these
        invalidRequests.forEach { request ->
            assertThrows<IllegalArgumentException> {
                // Domain entities should validate themselves
                request.copy() // This would trigger validation in real implementation
            }
        }
    }
    
    @Test
    fun `should validate analysis statistics calculation`() {
        // Given: Multiple analyses
        val analyses = listOf(
            createMockAnalysis(AnalysisType.SCREENSHOT, 0.8, WorkflowType.BASIC_ANALYSIS),
            createMockAnalysis(AnalysisType.DOCUMENT, 0.9, WorkflowType.CONTEXTUAL_ANALYSIS),
            createMockAnalysis(AnalysisType.UI_COMPONENT, 0.7, WorkflowType.BASIC_ANALYSIS),
            createMockAnalysis(AnalysisType.SCREENSHOT, 0.85, WorkflowType.ITERATIVE_REFINEMENT)
        )
        
        // When: Calculating statistics (this would be done by Kotlin business logic)
        val stats = calculateMockStatistics(analyses)
        
        // Then: Statistics should be accurate
        assertEquals(4L, stats.totalAnalyses)
        assertEquals(0.8125, stats.averageConfidence, 0.001) // (0.8+0.9+0.7+0.85)/4
        assertTrue(stats.averageProcessingTime > 0.0)
        
        // Verify breakdown by type
        assertEquals(2L, stats.analysisTypeBreakdown[AnalysisType.SCREENSHOT])
        assertEquals(1L, stats.analysisTypeBreakdown[AnalysisType.DOCUMENT])
        assertEquals(1L, stats.analysisTypeBreakdown[AnalysisType.UI_COMPONENT])
        
        // Verify breakdown by workflow
        assertEquals(2L, stats.workflowTypeBreakdown[WorkflowType.BASIC_ANALYSIS])
        assertEquals(1L, stats.workflowTypeBreakdown[WorkflowType.CONTEXTUAL_ANALYSIS])
        assertEquals(1L, stats.workflowTypeBreakdown[WorkflowType.ITERATIVE_REFINEMENT])
    }
    
    @Test
    fun `should validate context item structure for architecture compliance`() {
        // Given: Context items (would be managed by Kotlin business logic)
        val contextItems = listOf(
            ContextItem(
                id = "ctx-001",
                type = ContextType.DOCUMENTATION,
                title = "API Documentation",
                content = "Sample API documentation content",
                filePath = "/docs/api.md",
                tags = listOf("api", "documentation"),
                relevanceScore = 0.9
            ),
            ContextItem(
                id = "ctx-002",
                type = ContextType.UI_COMPONENTS,
                title = "Button Component",
                content = "React button component definition",
                filePath = "/components/Button.tsx",
                tags = listOf("ui", "component", "react"),
                relevanceScore = 0.8
            )
        )
        
        // When: Validating context items
        contextItems.forEach { item ->
            // Then: Items should follow proper structure
            assertTrue(item.id.isNotEmpty())
            assertNotNull(item.type)
            assertTrue(item.title.isNotEmpty())
            assertTrue(item.content.isNotEmpty())
            assertTrue(item.filePath.isNotEmpty())
            assertTrue(item.relevanceScore >= 0.0)
            assertTrue(item.relevanceScore <= 1.0)
            assertNotNull(item.lastModified)
        }
    }
    
    // Helper methods
    private fun createTestImage(): ByteArray {
        val image = BufferedImage(100, 100, BufferedImage.TYPE_INT_RGB)
        val g2d: Graphics2D = image.createGraphics()
        g2d.color = Color.WHITE
        g2d.fillRect(0, 0, 100, 100)
        g2d.color = Color.BLUE
        g2d.fillRect(10, 10, 80, 80)
        g2d.dispose()
        
        val baos = ByteArrayOutputStream()
        ImageIO.write(image, "PNG", baos)
        return baos.toByteArray()
    }
    
    private fun createMockAnalysis(
        type: AnalysisType,
        confidence: Double,
        workflow: WorkflowType
    ): MultimodalAnalysis {
        return MultimodalAnalysis(
            imageId = "test-${type.name.lowercase()}",
            analysisType = type,
            description = "Mock analysis for ${type.name}",
            confidence = confidence,
            modelUsed = "mock-model",
            workflowType = workflow,
            processingTime = 1.0 + Math.random(),
            userId = "test-user"
        )
    }
    
    private fun calculateMockStatistics(analyses: List<MultimodalAnalysis>): AnalysisStatistics {
        return AnalysisStatistics(
            totalAnalyses = analyses.size.toLong(),
            averageConfidence = analyses.map { it.confidence }.average(),
            averageProcessingTime = analyses.map { it.processingTime }.average(),
            analysisTypeBreakdown = analyses.groupBy { it.analysisType }
                .mapValues { it.value.size.toLong() },
            workflowTypeBreakdown = analyses.groupBy { it.workflowType }
                .mapValues { it.value.size.toLong() },
            modelUsageBreakdown = analyses.groupBy { it.modelUsed }
                .mapValues { it.value.size.toLong() },
            dailyAnalysisCount = mapOf("2025-01-06" to analyses.size.toLong())
        )
    }
    
    // Mock data class for Python inference result
    private data class MockPythonInferenceResult(
        val description: String,
        val confidence: Double,
        val modelUsed: String,
        val processingTime: Double
    )
}
